Disable horizontal scrollbar in chrome and fix scrollTo function to also work in chrome

--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,7 @@ div#chat-container {
     width: 95%;
     height: 80%;
     margin-top: 30px;
+    overflow-wrap: break-word;
 }
 
 iframe.chat-frame{
